<resources>
    <string name="app_name">Assignment2</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register a New Account!</string>
    <string name="firstname">First Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="mobileno">Mobile No.</string>
    <string name="signup">Sign Up</string>
    <string name="manageaccount">Manage Account</string>
    <string name="profile">Profile</string>
    <string name="changepassword">Change Password</string>
    <string name="currentpassword">Current Password</string>
    <string name="newpassword">New Password</string>
    <string name="savechanges">Save Changes</string>
</resources>
